--- a/11-Media_HTML/index.html
+++ b/11-Media_HTML/index.html
@@ -6,9 +6,33 @@
   <title>Document</title>
 </head>
 <body>
-    <video src="cotom.mp4"width="300" height="240" controls loop muted autoplay preload="auto"poster="thumbnail.png"></video>
-   
-  
+<video src="cotom.mp4"width="300" height="240" controls loop muted autoplay preload="auto"poster="thumbnail.png">
+</video>
+<br><br><br>
+
+<svg width="1400" height="600" viewBox="0 0 500 500">
+
+  <!-- Left Eye -->
+  <circle cx="50" cy="100" r="80" fill="blue" stroke="red" stroke-width="5" />
+
+  <!-- Right Eye -->
+  <circle cx="240" cy="100" r="80" fill="blue" stroke="red" stroke-width="5" />
+
+  <!-- Eyebrow Line -->
+  <line x1="60" y1="170" x2="240" y2="170" stroke="red" stroke-width="5" />
+
+  <!-- Nose (Centered Triangle) -->
+  <polygon points="150,180 120,250 180,250" fill="orange" stroke="black" stroke-width="3"/>
+
+  <!-- Mouth (Centered Rectangle) -->
+  <rect x="100" y="270" width="100" height="40" fill="yellow" stroke="green" stroke-width="3" />
+</svg>
+
+<iframe width="400" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d170348.12169649277!2d11.377029542497608!3d48.15479295514971!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479e75f9a38c5fd9%3A0x10cb84a7db1987d!2zTcO8bmNoZW4!5e0!3m2!1sde!2sde!4v1768688272043!5m2!1sde!2sde">
+</iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/wla3H-NVci0?si=iazAxB079w4_hYRm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 </body>
 </html>
 
